--- a/public/css/characloud.css
+++ b/public/css/characloud.css
@@ -55,17 +55,16 @@
 #characloud_search_button {
     margin-right: 10px;
     padding: 10px 20px;
-    background-color: #1abc9c;
+    background-color: #3c3d3d;
     color: white;
     font-size: 20px;
     border: none;
     border-radius: 20px;
-    box-shadow: 0px 0px 10px rgba(26, 188, 156, 0.5);
     cursor: pointer;
 }
 
 #characloud_search_button:hover {
-    background-color: #16a085;
+    background-color: #343a40;
 }
 
 #characloud_search_block {
@@ -123,25 +122,24 @@
 
 #characloud_characters {
     
-    margin-top: 0px;
+    margin-top: 20px;
 }
 
 .characloud_characters_category_title {
-    padding: 6px;
     font-weight: 600;
     font-size: 18px;
     cursor: pointer;
     width: min-content;
     white-space: nowrap;
+    height: 10px;
 }
 
 .characloud_characters_row {
     position: relative;
     overflow: hidden;
     height: 340px;/*height: 345px;*/
-    margin-bottom: 35px;
-    background-color: #ffffff22;
-    padding: 8px;
+    margin-bottom: -30px;
+    margin-right: 60px;
     padding-top: 30px;
     border-radius: 10px;
 }
@@ -170,11 +168,11 @@
 .characloud_swipe_rigth, .characloud_swipe_left {
     z-index: 230;
     position: absolute;
-    top: 50%;
+    top: 45%;
     transform: translateY(-50%);
     /*margin-left: -30px; /* Half of the button's width */
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     background: rgba(13, 13, 13, 0.7);
     display: flex;
@@ -183,7 +181,7 @@
     cursor: pointer;
 }
 .characloud_swipe_rigth {
-    right: 20px;
+    right: 10px;
 }
 .characloud_swipe_left {
     left: 20px;
@@ -191,8 +189,8 @@
     opacity: 0.0;
 }
 .characloud_swipe_rigth img, .characloud_swipe_left img {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
 }
 
 /*        */
@@ -200,22 +198,32 @@
   position: relative;
   margin-right: 25px;
   cursor: pointer;
+  position: relative;
+  margin-right: 42px; #42
+  display: inline-block;
+  border-radius: 22px;
+  border-block: 0px solid #2b2c2d;
+  border-inline: 0px solid #2b2c2d;
+  background: #2b2c2d;
+  border-bottom: 50px solid #2b2c2d;
+  cursor: pointer;
 }
 
 .characloud_character_block_card .avatar {
-  padding: 0px;
-  border-radius: 5px;
-  width: 280px;
-  height: 280px;
+  padding: 24px;
+  border-radius: 22px;
+  width: 199px;
+  height: 199px;
   position: relative; /* make the avatar container position:relative */
   overflow: hidden; /* hide the overflow of the box-shadow */
+  margin-bottom: 10px;
+  bottom: 8px;
 }
 
 .characloud_character_block_card .avatar img {
-  border-radius: 5px;
+  border-radius: 14px;
   width: 100%;
   height: 100%;
-  object-fit: cover;
   object-position: center center;
 }
 
@@ -227,7 +235,7 @@
   right: 0;
   bottom: -10px; /* adjust the shadow position */
   height: 100px; /* adjust the shadow height */
-  background-image: linear-gradient(rgba(0,0,0,0.00) 0%, rgba(0,0,0,0.6) 50%, rgba(0,0,0,0.7) 100%); /* add the gradient background image */
+  /* background-image: linear-gradient(rgba(0,0,0,0.00) 0%, rgba(0,0,0,0.6) 50%, rgba(0,0,0,0.7) 100%); */ /* add the gradient background image */
 }
 
 .characloud_character_block_name {
@@ -237,27 +245,28 @@
   position: absolute;
   left: 0;
   right: 0;
-  bottom: 10px;
+  bottom: -7px;
   padding: 10px;
   color: white;
   z-index: 1; /* make the character name and description appear on top of the shadow */
 }
 
 .characloud_character_block_user_name {
-    text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.9);
+    text-shadow: 0px 0px 0px rgba(0, 0, 0, 0.9);
     display: flex;
     align-items: center;
     justify-content: center;
     position: absolute;
     left: 0;
     right: 0;
-    bottom: 40px;
-    height: 40px;
+    bottom: -55px;
+    height: 43px;
     margin: 10px;
     margin-bottom: 0px;
     color: white;
     width: min-content;
     z-index: 699; /* make the character name and description appear on top of the shadow */
+    font-size: 13px;
 }
 .characloud_character_block_user_name:hover {
     filter: brightness(150%);
@@ -294,10 +303,11 @@
   position: absolute;
   font-weight: 400;
   text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.9);
-  font-size: 13px;
+  font-size: 11px;
   left: 1px;
   right: 0;
-  top:89%;/*top: calc(100% + 0px); /* position the description below the name */
+  top: 96%;
+  /*top: calc(100% + 0px); /* position the description below the name */
   margin-top: 0px; /* add margin to separate the name and description */
   padding: 10px;
   z-index: 1; /* make the character name and description appear on top of the shadow */
@@ -467,8 +477,8 @@
 
 #chara_cloud #characloud_close_button img {
     opacity: 0.2;
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
     vertical-align: middle;
 }
 
@@ -517,17 +527,18 @@
     height:780px;
     box-shadow: 0 0 2px rgba(200,200,200,0.1);
     padding: 4px;
-    background: #191b31FB;
+    background: #d0d0d0fb;
     border-radius: 1px;
     overflow: auto;
     padding: 30px;
     border-radius: 4px;
-
-    background-image: linear-gradient(to bottom, rgba(25, 27, 49, 0.8) 0%, rgba(25, 27, 49, 1) 100%), url("../img/login.png");
+    /* background-image: linear-gradient(to bottom, rgba(25, 27, 49, 0.8) 0%, rgba(25, 27, 49, 1) 100%), url("../img/login.png"); */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    background-color: #1e1f24;
 }
+
 
 
 
@@ -607,9 +618,10 @@
 /*Contant block*/
 .characloud_content {
     display: none;
-    background-color: #1e2135;/*#222431;/*#191b31;*/
+    background-color: #2a2a2a;/*#222431;/*#191b31;*/
     min-height: calc(100vh - 185px);
     margin-top: 10px;
+    margin-right: 80px;
 }
 
 /*Header*/
@@ -618,12 +630,13 @@
     flex-direction: column;
     justify-content: center; /* center content vertically */
     /*align-items: center;  center content horizontally */
-    background-color: #16182d;
+    background-color: #1b1b1c;
     /*padding: 15px;*/
     width: 100%;
     height: 60px;
     margin: 0px;
     border: 2px solid #cccccc10;
+    border-color: #1b1b1c;
     /*box-shadow: 0 2px 4px rgba(150, 150, 150, 0.05);*/
 }
 .characloud_header div {
@@ -633,7 +646,7 @@
     font-size: 24px;
     font-weight: bold;
     margin: 0;
-    color: #6b6f7b;
+    color: rgb(255 255 255 / 85%);
 }
 /* Ccharacter block */
 #characloud_character_page {
@@ -695,10 +708,9 @@
     box-shadow: 0 0 1px rgba(200,200,200,0.5);
     border-radius: 4px;
     font-size: 17px;
-    background-color: #282b40;/*#222431;/*rgb(33,37,41);/*#13152c;*/
+    background-color: #1d1e21;/*#222431;/*rgb(33,37,41);/*#13152c;*/
     color: #b1b9c2;
     resize: vertical;
-
 }
 #scenario-textarea {
     height: 58px;
@@ -746,16 +758,17 @@
 .characloud_character_page_buttons button {
     margin-left: 10px;
     padding: 10px 20px;
-    background-color: #0077cc;
+    background-color: rgba(36,115,174,1.0);
     border: none;
     color: white;
     font-size: 16px;
     cursor: pointer;
     display: none;
+    border-radius: 5px;
 }
 
 .characloud_character_page_buttons button:hover {
-    background-color: #0066b3;
+    background-color: #4684b2;
 }
 
 .update_button {
@@ -812,7 +825,7 @@
 
 }
 .username_text {
-    color: #6b727b;
+    color: rgb(229 224 193 / 100%);
 }
 .star-icon {
     display: none;/*inline-block;*/
@@ -836,6 +849,7 @@
     font-size: 12px;
     font-weight: unset;
     cursor: pointer;
+    visibility: hidden;
 }
 .registration-date {
     
@@ -847,13 +861,15 @@
 .upload-character-button, .upload-avatar-button, .profile-button {
     display: inline-block;
     margin-top: 10px;
-    padding: 10px 20px;
+    padding: 6px 20px;
     font-size: 16px;
-    background-color: #4CAF50;
+    background-color: #3f3f3f;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-family: inherit;
+    font-weight: 500;
 }
 
 .character-gallery {
@@ -1017,18 +1033,20 @@
     
 }
 #user_profile_prev_button, #user_profile_next_button {
-    background-color: #4CAF50;
+    background-color: #3f3f3f;
     color: white;
     border: none;
-    padding: 10px;
+    padding: 6px;
     margin: 10px;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+    font-family: inherit;
+    font-weight: 500;
 }
 
 #user_profile_prev_button:hover, #user_profile_next_button:hover {
-    background-color: #3e8e41;
+    background-color: #343a40;
 }
 
 .user_profile_character {
@@ -1044,19 +1062,7 @@
     width: 132px;
     height: 200px;
 }
-.user_profile_character_delete {
-
-    height: 25px;
-    position: absolute;
-    float: right;
-    right: 8px;
-    top: 8px;
-    cursor: pointer;
-    opacity: 0.5;
-    background-color: black;
-    border-radius: 2px;
-    padding: 1px;
-}
+.user_profile_character_delete {height: 30px;position: absolute;float: right;right: -15px;top: -13px;cursor: pointer;opacity: 0.5;/* background-color: black; */border-radius: 30px;padding: 0px;}
 
 
 
@@ -1215,7 +1221,7 @@
 }
 
 .characloud_content .characloud_character_block .characloud_character_block_card .avatar {
-    width: 195px;
+    width: 216px;
 }
 
 #characloud_user_profile_block .characloud_character_block {
@@ -1227,16 +1233,15 @@
     justify-content: center;
     align-items: center;
     margin-top: 0px;
-    background-color: #1e2135; 
+    background-color: #1b1b1c; 
     height: 80px;
-    margin-bottom: 6px;
     padding: 2px;
+    margin-right: 80px;
 }
 #characloud_bottom_block {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #16182da8;
     width: 100%;
     height: 100%;
 }
